# ip-project

./: .gitignore  A.c  BIGOOGLE.txt  LIDAR  OpenCameraUsingOpen-CVPython.py  README.md  SwVersion.c  TestTransferFiles  auth flow.drawio  ayanewfile  build_steps_.txt  config.py  file.txt  file2.txt  gdeeeed1  gitlab.txt  he_testingSample1.txt  he_testingSample2.txt  info.json  joris.c  package.txt  package_logs  security schematic.drawio  snsn.txt  sw_integration_portal_delivery.json  taskScedule.txt  test.txt  test1.txt  test2.txt  test4.txt  testDocH.txt  testFile  x.txt
_metadata/: vintgo.yaml
_metadata/packages_receipes/provencore_gw/: conanfile.py
_metadata/packages_receipes/provencore_main/: conanfile.py
e21_cp4_udc_release/: mb-udc_240205A.ipk
gsoc/: build.sh  version.txt
gsoc/configs/: CA801_provenrun.csv
gsoc/provencore/: Makefile
gsoc/provencore/applications/: app_header.c
gsoc/provencore/crates/pnc-channel-rs/: Cargo.toml
gsoc/provencore/crates/pnc-channel-rs/src/: lib.rs
gsoc/provencore/crates/pnc-channel-rs/src/channel/: message.rs  mod.rs  shm.rs  vircopy.rs
gsoc/provencore/crates/pnc-channel-rs/src/transport/: cbor.rs  json.rs  mod.rs  postcard.rs
gsoc/provencore/crates/pnc-device/: Cargo.toml  build.rs  deny.toml  wrapper.h
gsoc/provencore/crates/pnc-device/src/: lib.rs
gsoc/provencore/crates/pnc-rs/: Cargo.toml  build.rs  deny.toml
gsoc/provencore/crates/pnc-rs/src/: allocator.rs  auth.rs  device.rs  error.rs  ipc.rs  irq.rs  lib.rs  libc.rs  panic.rs  rees.rs  shm.rs  sys_procs_pid.rs
gsoc/provencore/crates/pnc-rs/src/libpnc/: errno.rs  mod.rs  static-wrappers.c  static-wrappers.h
msoc/: build.sh  version.txt
source code/: function.c
sources/: function.c
(+168 files in other folders)
