[package]
name = "pnc-channel"
version = "0.3.0"
edition = "2018"
publish = false

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
overflow-checks = false

[features]
default = ["serde", "postcard", "serde_json", "serde_cbor"]

[dependencies]
pnc = { path = "../pnc-rs" }
serde = { version = "1.0.115", default-features = false, optional = true }
postcard = { version = "0.5.1", features = [ "alloc" ], optional = true }
serde_json = { version = "1.0.57", features = [ "alloc" ], default-features = false, optional = true }
serde_cbor = { version = "0.11.1", features = [ "alloc" ], default-features = false, optional = true }
