[package]
name = "pnc-device"
version = "0.1.0"
edition = "2018"
publish = false
resolver = "2" # we want to use std crates in build dependencies and this is a no_std crate

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
overflow-checks = false

[build-dependencies]
bindgen = { version = "0.58.1", default-features = false }
pnc-header-paths = { path = "../pnc-header-paths" }

[dependencies]
pnc = { path = "../pnc-rs" }
